--- a/lib/src/Makefile
+++ b/lib/src/Makefile
@@ -56,7 +56,7 @@ $(OBJDIR)/%.o : %.c
 
 COREFILES := core vgcore*
 clean:
-	rm -rf $(TARGET) $(OBJDIR) $(COREFILES) .ktags
+	rm -rf $(TARGET) $(OBJDIR) $(COREFILES) __ktags
 
 ktags:
 	@ktags
